--- a/views/partials/social_media.ejs
+++ b/views/partials/social_media.ejs
@@ -54,7 +54,9 @@
 >
 <% if(typeof SocialMediaLinks != 'undefined' && SocialMediaLinks.length > 0) { %> 
 	<% SocialMediaLinks.forEach(link =>{ %> 
-		<a href ="<%= link.link.includes('http://') || link.link.includes('https://') ? link.link : `http://${link.link}` %>">
+		<a 
+			href ="<%= link.link.includes('http://') || link.link.includes('https://') ? link.link : `http://${link.link}` %>"
+			target="_blank">
 			<img 
 				src ="<%= ReturnIcon(link.platform) %>" 
 				alt = "<%= link.platform %> link" 
