--- a/views/user/userForm.ejs
+++ b/views/user/userForm.ejs
@@ -8,6 +8,7 @@
   <link rel ="stylesheet" href='../../stylesheets/tailwind.css'> 
   <script type="text/javascript" src="../../script/join.js"></script>
   <script type="text/javascript" src="../../script/checkEmail.js"></script>
+  <script type="text/javascript" src="../../script/cursorDeleteMessage.js"></script>
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
 </head>
 <body class = "bg-[#555150] h-auto font-['DecoTech'] relative 
