--- a/views/user/userDetail.ejs
+++ b/views/user/userDetail.ejs
@@ -5,6 +5,7 @@
   <title>Henry's Speakeasy</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel ="stylesheet" href='../stylesheets/style.css'> 
+  <link rel ="stylesheet" href='../stylesheets/tailwind.css'> 
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
 </head>
 <body 
@@ -33,24 +34,16 @@
                   <% }) %>
               </div>
           <%}%>
+          <% if(user) { %>
           <h1
             class = "text-center text-white text-5xl"
           ><%= title %></h1>
-            <% var ProfilePicStyle = "w-[250px] h-[250px] m-auto rounded-full" %>
-            <div 
-		    class = ""
-		    id = "AvatarField">
-			    <% if(typeof userDetail.profile_pic != 'undefined' && typeof userDetail.profile_pic.data != 'undefined' && (user && (userDetail._id == user.id || user.member == true))) {%>
-				    <img 
-                        src="data:<%= userDetail.profile_pic.contentType %>;base64,<%= userDetail.profile_pic.data.toString('base64') %>"
-                        class = "<%= ProfilePicStyle %>"
-                        />
-			    <%} else {%>
-				    <img src="<%= avatar %>"
-					    class="<%= ProfilePicStyle %>"
-					    alt="avatar" />
-			    <% } %>
-		    </div>
+          <% } else { %> 
+          <h1
+            class = "text-center text-white text-5xl"
+          >Anonymous's Profile</h1>
+          <%}%>
+            <%- include('./profilePicDisplay') %>
             <% if(user && userDetail._id == user.id) {%>
                 <div 
                     onclick = "location.href='/user/<%= user.id %>/update'"
@@ -80,9 +73,9 @@
             </div>
             <% if(typeof userDetail.favoriteDrink != 'undefined' && userDetail.favoriteDrink.length > 0) { %> 
                 <h2
-                    class = "text-center text-3xl text-[#dbdbdb]"
-                >Favorite Drink<h2>
-                <ul>
+                    class = "text-center text-3xl text-[#ffffff] mt-[30px] uppercase"
+                >Favorite Drink<%= userDetail.favoriteDrink.length > 1 ? 's' : '' %><h2>
+                <ul class = "text-center text-2xl text-[#dbdbdb]">
                 <% userDetail.favoriteDrink.forEach(drink =>{ %> 
                     <li><%= drink %></li>
                 <%})%>
@@ -90,7 +83,7 @@
             <%}%>
             <% if(typeof userDetail.biography != 'undefined') {%> 
             <div>
-                <h3 class = "text-3xl text-[#dbdbdb] my-10 text-center">Bio</h3>
+                <h3 class = "text-3xl text-white mt-10 text-center uppercase">Biography</h3>
                 <p class = "text-[#dbdbdb] text-2xl">
                     &#09;<%= userDetail.biography %>
                 </p>
