--- a/views/user/profilePicDisplay.ejs
+++ b/views/user/profilePicDisplay.ejs
@@ -1,6 +1,6 @@
 <% var ProfilePicStyle = "w-[250px] h-[250px] m-auto rounded-full" %>
 <div 
-class = "relative"
+class = ""
 id = "AvatarField">
 	<% if(user) {%>
 		<% if(typeof userDetail.profile_pic != 'undefined' && typeof userDetail.profile_pic.data != 'undefined') {%>
@@ -9,39 +9,14 @@ id = "AvatarField">
 				class = "<%= ProfilePicStyle %>"
 				/>
 		<%} else {%>
-			<img src="<%= avatar %>"
-				class="<%= ProfilePicStyle %>"
-				id="NoPhoto"
-				alt="no-photo" />
+			<div 
+				class ="w-[250px] h-[250px] m-auto rounded-full bg-black block relative">
+				<div class = "text-white text-2xl text-center absolute top-[45%] left-0 right-0">User's profile picture has not been uploaded yet</div>
+			</div>
 		<% } %>
 	<% } else { %>
 		<img src="<%= avatar %>"
 			class="<%= ProfilePicStyle %>"
 			alt="avatar" />
 	<% }%>
-	<script>
-			const NoPhotoElem = document.getElementById('NoPhoto');
-			const Container = document.getElementById('AvatarField'); 
-
-			const PhotoMessage = document.createElement('div'); 
-
-			PhotoMessage.classList.add("PhotoMessage");
-
-			PhotoMessage.innerHTML = "The user has not uploaded a profile picture yet."
-			
-			NoPhotoElem.addEventListener('mouseover', evt =>DisplayPhotoMessage(evt) )
-			NoPhotoElem.addEventListener('mouseout', evt=>HidePhotoMessage(evt))
-
-			function DisplayPhotoMessage(evt) {
-				Container.appendChild(PhotoMessage)
-				PhotoMessage.style.left = evt.pageX + 'px';
-				PhotoMessage.style.top = evt.pageY + 'px';
-			}
-
-			function HidePhotoMessage(evt) {
-				Container.removeChild(PhotoMessage)
-			} 
-
-
-	</script>
 </div>
