--- a/views/partials/mainPage/messageBoard.ejs
+++ b/views/partials/mainPage/messageBoard.ejs
@@ -9,7 +9,7 @@
 		>
 			<div 
 				id="wrapper"
-				class ="w-11/12 m-auto py-5 grid grid-cols-[20%_80%]"
+				class ="w-11/12 m-auto py-5 grid sm:grid-cols-[20%_80%]"
 			>
 				<%- include('./profilePicDisplay_messageB', {mess: mess}) %>
 				<div>
