--- a/public/stylesheets/tailwind.css
+++ b/public/stylesheets/tailwind.css
@@ -215,6 +215,18 @@
     transform: translateX(0px) translateY(0px);
 }
 
+.FormFadeIn {
+    opacity: 1.0;
+    transform: translateY(20px);
+    transition: opacity 2s, transform 2s;
+}
+
+.FormFadeOut {
+    opacity: 0.0;
+    transition: opacity 2s ease-in;
+}
+
+
 @media screen and (max-width: 540px) {
     .EmailErrorMessage {
         max-width: 300px; 
