--- a/views/user/userDetail.ejs
+++ b/views/user/userDetail.ejs
@@ -7,6 +7,7 @@
   <link rel ="stylesheet" href='../stylesheets/style.css'> 
   <link rel ="stylesheet" href='../stylesheets/tailwind.css'> 
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body 
     class = "bg-[#555150] h-auto font-['DecoTech'] relative 
