--- a/views/user/userForm.ejs
+++ b/views/user/userForm.ejs
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="../../script/checkEmail.js"></script>
   <script type="text/javascript" src="../../script/cursorDeleteMessage.js"></script>
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
 <body class = "bg-[#555150] h-auto font-['DecoTech'] relative 
     before:bg-[url('<%= BackgroundImageURL %>')] before:absolute before:h-full before:w-full
