--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -532,14 +532,26 @@ video {
 .mb-\[135px\] {
   margin-bottom: 135px;
 }
+.mb-\[20px\] {
+  margin-bottom: 20px;
+}
+.mb-\[25px\] {
+  margin-bottom: 25px;
+}
 .mb-\[50px\] {
   margin-bottom: 50px;
+}
+.mt-10 {
+  margin-top: 2.5rem;
 }
 .mt-\[100px\] {
   margin-top: 100px;
 }
 .flex {
   display: flex;
+}
+.grid {
+  display: grid;
 }
 .h-\[100px\] {
   height: 100px;
@@ -567,6 +579,9 @@ video {
 }
 .grow {
   flex-grow: 1;
+}
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .cursor-pointer {
   cursor: pointer;
@@ -629,6 +644,9 @@ video {
 .bg-cover {
   background-size: cover;
 }
+.bg-repeat {
+  background-repeat: repeat;
+}
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
@@ -640,6 +658,14 @@ video {
 }
 .p-\[10px\] {
   padding: 10px;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+.px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .pb-\[6\.5rem\] {
   padding-bottom: 6.5rem;
@@ -661,6 +687,10 @@ video {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
@@ -675,9 +705,24 @@ video {
 .uppercase {
   text-transform: uppercase;
 }
+.lowercase {
+  text-transform: lowercase;
+}
+.text-\[\#333333\] {
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
+}
+.text-\[\#dbdbdb\] {
+  --tw-text-opacity: 1;
+  color: rgb(219 219 219 / var(--tw-text-opacity));
+}
 .text-\[\#f2e796\] {
   --tw-text-opacity: 1;
   color: rgb(242 231 150 / var(--tw-text-opacity));
+}
+.text-\[\#f9bb28\] {
+  --tw-text-opacity: 1;
+  color: rgb(249 187 40 / var(--tw-text-opacity));
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -686,6 +731,17 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.opacity-0 {
+  opacity: 0;
+}
+.transition-\[opacity\] {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.duration-\[2000ms\] {
+  transition-duration: 2000ms;
 }
 
 @font-face {
@@ -900,6 +956,18 @@ video {
     transform: translateX(0px) translateY(0px);
 }
 
+.FormFadeIn {
+    opacity: 1.0;
+    transform: translateY(20px);
+    transition: opacity 2s, transform 2s;
+}
+
+.FormFadeOut {
+    opacity: 0.0;
+    transition: opacity 2s ease-in;
+}
+
+
 @media screen and (max-width: 540px) {
     .EmailErrorMessage {
         max-width: 300px; 
@@ -907,53 +975,64 @@ video {
     }
 }
 
+
 .file\:rounded-lg::file-selector-button {
   border-radius: 0.5rem;
 }
+
 
 .file\:bg-\[\#99cbae\]::file-selector-button {
   --tw-bg-opacity: 1;
   background-color: rgb(153 203 174 / var(--tw-bg-opacity));
 }
 
+
 .file\:font-\[\'DecoTech\'\]::file-selector-button {
   font-family: 'DecoTech';
 }
+
 
 .file\:text-white::file-selector-button {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+
 .placeholder\:text-\[\#545454\]::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
+
 
 .placeholder\:text-\[\#545454\]::placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
 
+
 .hover\:bg-\[\#d48518\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(212 133 24 / var(--tw-bg-opacity));
 }
+
 
 .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+
 .active\:translate-x-\[5px\]:active {
   --tw-translate-x: 5px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+
 .active\:translate-y-\[5px\]:active {
   --tw-translate-y: 5px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+
 
 @media (min-width: 640px) {
 
@@ -961,10 +1040,19 @@ video {
     margin-bottom: 100px;
   }
 
+  .sm\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .sm\:w-5\/12 {
     width: 41.666667%;
   }
+
+  .sm\:w-7\/12 {
+    width: 58.333333%;
+  }
 }
+
 
 @media (min-width: 768px) {
 
@@ -973,82 +1061,100 @@ video {
   }
 }
 
+
 .\[\&\>\*\]\:mx-5>* {
   margin-left: 1.25rem;
   margin-right: 1.25rem;
 }
 
+
 .\[\&\>\*\]\:inline-block>* {
   display: inline-block;
 }
+
 
 .\[\&\>div\>input\]\:rounded-lg>div>input {
   border-radius: 0.5rem;
 }
 
+
 .\[\&\>div\>input\]\:border-\[1px\]>div>input {
   border-width: 1px;
 }
+
 
 .\[\&\>div\>input\]\:border-white>div>input {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+
 .\[\&\>div\>input\]\:bg-\[rgba\(0\2c 0\2c 0\2c 0\)\]>div>input {
   background-color: rgba(0,0,0,0);
 }
 
+
 .\[\&\>div\>input\]\:pl-3>div>input {
   padding-left: 0.75rem;
 }
+
 
 .\[\&\>div\>input\]\:text-black>div>input {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+
 .\[\&\>div\>input\]\:placeholder\:text-base>div>input::-moz-placeholder {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+
 
 .\[\&\>div\>input\]\:placeholder\:text-base>div>input::placeholder {
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
+
 .\[\&\>div\>input\]\:placeholder\:text-\[\#545454\]>div>input::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
+
 
 .\[\&\>div\>input\]\:placeholder\:text-\[\#545454\]>div>input::placeholder {
   --tw-text-opacity: 1;
   color: rgb(84 84 84 / var(--tw-text-opacity));
 }
 
+
 .\[\&\>div\>label\]\:font-bold>div>label {
   font-weight: 700;
 }
 
+
 .\[\&\>div\>label\]\:uppercase>div>label {
   text-transform: uppercase;
 }
+
 
 .\[\&\>div\>label\]\:text-black>div>label {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+
 .\[\&\>div\]\:my-\[10px\]>div {
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
+
 .\[\&\>div\]\:grid>div {
   display: grid;
 }
+
 
 .\[\&\>div\]\:w-full>div {
   width: 100%;
