--- a/views/partials/MobileMenu.ejs
+++ b/views/partials/MobileMenu.ejs
@@ -4,6 +4,9 @@
 	<div 
 		class = "mt-10 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl" 
 		onclick="location.href='/'">Home</div>
+	<div
+		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
+		onclick="location.href='/users'">Members</div>
 	<div 
 		class = "my-5 cursor-pointer hover:underline hover:text-gray-500 active:text-3xl"
 		onclick="location.href='/contact'">Contact</div>
