--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,7 +65,9 @@
 		<div 
 			id= "HeaderMenu"
 			class = "flex text-white ml-auto mr-5 [&>*]:mx-[10px] my-auto cursor-pointer">
-			
+			<div
+				class = "hover:underline hover:font-bold"
+				onclick="location.href='/users'">Members</div>
 			<div 
 				class = "hover:underline hover:font-bold"
 				onclick="location.href='/contact'">Contact</div>
