--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
 		MobileMenu.classList.remove('closed-menu');
 		MobileMenu.classList.add('opened-menu');
 	}
-	const clickEvent = event =>{
+	const CheckIfClickedOutsideMobileMenu = event =>{
 		const targetEvent = event.target
 		MobileMenu = document.getElementById('MobileMenu')
 		if(MobileMenu != targetEvent){
@@ -25,7 +25,7 @@
 			MobileMenu.classList.add('closed-menu');
 		}
 	} 
-	document.addEventListener("mousedown", clickEvent)
+	
 </script>
 <% var BackgrounColor ="black" %>
 <div
@@ -66,13 +66,32 @@
 			id= "HeaderMenu"
 			class = "flex text-white ml-auto mr-5 [&>*]:mx-[10px] my-auto cursor-pointer">
 			<div
-				class = "hover:underline hover:font-bold"
+				class = "hover:underline hover:font-bold my-auto"
 				onclick="location.href='/users'">Members</div>
 			<div 
-				class = "hover:underline hover:font-bold"
+				class = "hover:underline hover:font-bold my-auto"
 				onclick="location.href='/contact'">Contact</div>
 			<% if(user) { %>
-				<div>
+				<div >
+					<% if(user.profile_pic.contentType != 'undefine') { %>
+					<div
+						id="AccountLink"
+						class = "hover:underline hover:font-bold flex w-[50px] h-[50px]
+							m-auto relative">
+						<img
+							id="ProfilePic"
+							src ="data:<%= user.profile_pic.contentType %>;base64,<%= user.profile_pic.data.toString('base64') %>"
+							alt= "<%=user.username%>_profile_picture"
+							class = "rounded-full m-auto w-full h-full userselect-none"/>
+						<div class =" rounded-full w-[15px] h-[15px] absolute bottom-0 
+							 left-auto right-0 border-white border-[1px] bg-black">
+							<img
+							 src ="<%=DownArrow %>"
+							class="w-[15px] h-[15px] m-auto"
+							alt ="arrow"/>
+						</div>
+					</div>
+					<% } else { %>
 					<div
 						id="AccountLink"
 						class = "hover:underline hover:font-bold flex">
@@ -82,60 +101,84 @@
 							rounded-full border-[1px] p-1 mx-1 my-auto">
 							<img
 								src ="<%=DownArrow %>"
-								class="w-[15px] h-[15px]  "
+								class="w-[15px] h-[15px]"
 								alt ="arrow"/>
-						</div>
+					    </div>
 					</div>
-					<ul 
+					<% } %>
+					<div 
 						id="AccountMenu"
-						class="hidden grid absolute [&>a>li]:my-5 [&>a>li]:whitespace-nowrap
-						">
-						<a href ="/user/<%= user.id%>">
-							<li class ="hover:underline">Your profile</li>
-						</a>
-						<a href ="/user/<%= user.id%>/update">
-							<li class ="hover:underline">Edit profile</li>
-						</a>
-						<a href ="/logout">
-							<li class ="hover:underline">Log Out</li>
-						</a>
-					</ul>
+						class="hidden grid absolute [&>div]:my-5 [&>div]:whitespace-nowrap
+						bg-[#f2e796] [&>div]:text-black [&>div]:mx-[10px] translate-x-[-30px]">
+							<div 
+								class ="hover:underline">
+								<a href ="/user/<%= user.id%>">Your profile</a>
+							</div>
+							<div class ="hover:underline">
+								<a href ="/user/<%= user.id%>/update">Edit profile</a>
+							</div>
+							<div class ="hover:underline">
+								<a href ="/logout">Log Out</a>
+							</div>
+					</div>
 				</div>
 			<% } else { %>
 				<div
-					class = "hover:underline hover:font-bold"
+					class = "hover:underline hover:font-bold my-auto"
 					onclick="location.href='/login'">Log In</div>
 			<% } %>
 		</div>
 <script>
-	const AccountLink = document.getElementById('AccountLink');
-	const AccountMenu = document.getElementById('AccountMenu');
-	AccountLink.addEventListener("click", ToggleAccountMenu);
+	<% if(typeof user != 'undefined') { %>
+		var AccountLink = document.querySelector('#AccountLink');
+		var AccountMenu = document.querySelector('#AccountMenu');
+		var Container = document.querySelector("#container");
+		var ProfilePic =document.querySelector("#ProfilePic"); 
+		const MobileHeader = document.getElementById('MobileHeader');
+		
+		AccountLink.addEventListener("click", ToggleAccountMenu);
 
-	function ToggleAccountMenu(){
-	if(AccountMenu.classList.contains('hidden')){
-	AccountMenu.classList.remove('hidden');
-	AccountMenu.classList.add('grid');
-	}
-	else{
-	CloseAccountMenu();
-	}
-	}
-
-	function CloseAccountMenu(){
-	AccountMenu.classList.remove('grid');
-	AccountMenu.classList.add('hidden');
-	}
-
-	function CheckIfClickedOutside(evt){
-		if(AccountMenu.classList.contains('grid')){
-			if(evt.target != AccountMenu){
-				CloseAccountMenu();
-			}
+		function ToggleAccountMenu(){
+		if(AccountMenu.classList.contains('hidden')){
+		AccountMenu.classList.remove('hidden');
+		AccountMenu.classList.add('grid');
 		}
+		else{
+		CloseAccountMenu();
+		}
+		}
+
+		function CloseAccountMenu(){
+		AccountMenu.classList.remove('grid');
+		AccountMenu.classList.add('hidden');
+		}
+	<% } %>
+		
+	
+	function CheckIfClickedOutsideAccountMenu(evt){
+	//If the user is logged in
+	<% if(typeof user != 'undefined') { %>
+		//If the user's profile picture exist, execute the following
+		//The image is chosen instead of its parent because for some reason, the image is only registered by click
+		<% if(user.profile_pic.contentType != 'undefine') { %>
+		if (!AccountMenu.classList.contains('hidden') && evt.target != AccountMenu && evt.target != ProfilePic){
+			CloseAccountMenu();
+		}
+		<% } else { %> 
+		if (!AccountMenu.classList.contains('hidden') && evt.target != AccountMenu && evt.target != AccountLink){
+			CloseAccountMenu();
+			}
+			<%}%>
+	<% } %>
 	}
-
-	document.addEventListener('mousedown', CheckIfClickedOutside);
-
-</script>
+	
+	Container.addEventListener("mousedown", (evt)=>{
+		if(window.innerWidth >= 640){
+		CheckIfClickedOutsideAccountMenu(evt)
+		}
+		else{
+		CheckIfClickedOutsideMobileMenu(evt)
+		}
+	})
+	</script>
 </div>
